<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/stock_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Error view-->
        <TextView
            android:id="@+id/text_error_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="gone"
            tools:text="error"/>

        <ProgressBar
            android:id="@+id/loading_spinner"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <!-- Stock Detail Info -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_middle"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_day_low"
                    style="@style/StockDetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Day-Low: 128.5"/>

                <TextView
                    android:id="@+id/text_day_high"
                    style="@style/StockDetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Day-Low: 128.5"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_year_low"
                    style="@style/StockDetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Day-Low: 128.5"/>

                <TextView
                    android:id="@+id/text_year_high"
                    style="@style/StockDetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Day-Low: 128.5"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_eps"
                    style="@style/StockDetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Day-Low: 128.5"
                    />


                <TextView
                    android:id="@+id/text_roe"
                    style="@style/StockDetailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Day-Low: 128.5"/>
            </LinearLayout>
        </LinearLayout>


        <!-- Graph -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_label_one_day"
                style="@style/GraphLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_label_graph_one_day"/>

            <ImageView
                android:id="@+id/image_one_day_graph"
                style="@style/Graph"
                android:contentDescription="@string/graph_description_for_one_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/rectangle"
                />

            <TextView
                android:id="@+id/text_label_five_day"
                style="@style/GraphLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_label_graph_five_days"
                />

            <ImageView
                android:id="@+id/image_five_day_graph"
                style="@style/Graph"
                android:contentDescription="@string/graph_description_for_five_daysy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/rectangle"/>

            <TextView
                android:id="@+id/text_label_one_month"
                style="@style/GraphLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_label_graph_one_month"/>

            <ImageView
                android:id="@+id/image_one_month_graph"
                android:contentDescription="@string/graph_description_for_one_month"
                style="@style/Graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/rectangle"/>

            <TextView
                android:id="@+id/text_label_six_month"
                style="@style/GraphLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin_middle"
                android:paddingStart="@dimen/margin_middle"
                android:text="@string/text_label_graph_six_months"/>

            <ImageView
                android:id="@+id/image_five_six_months"
                android:contentDescription="@string/graph_description_for_six_months"
                style="@style/Graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/rectangle"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_middle"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/margin_middle"
                android:paddingStart="@dimen/margin_middle"
                >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_label_history_date"
                        style="@style/HistoryDataLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:layout_marginStart="@dimen/margin_middle"
                        android:gravity="end"
                        android:text="@string/text_label_history_day"/>

                    <TextView
                        android:id="@+id/text_history_date"

                        style="@style/HistoryDataLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:gravity="end"
                        tools:text="2017/02/14"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_label_history_price"

                        style="@style/HistoryDataLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin_large"
                        android:gravity="start"
                        android:text="@string/text_label_history_closing_price"/>

                    <TextView
                        android:id="@+id/text_history_price"

                        style="@style/HistoryDataLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_large"
                        android:gravity="end"
                        tools:text="$50,000"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>